fix(ci): :bug: identation on yaml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,13 +1,18 @@
 name: Build next.js application
+
 on: push
+
 jobs:
   build-project:
-  name: Build project
-  runs-on: ubuntu-latest
-  steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-    - name: install dependencies with NPM
-      run: npm install
-    - name: Build project
-      run: npm run build
+    name: Build project
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Install dependencies with NPM
+        run: npm install
+
+      - name: Build project
+        run: npm run build
